<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_xxl"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/currentTimeText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/horizontal_margin_chat_activity"
            android:gravity="center_vertical"
            android:text="@string/timeshift_default_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/programTotalTimeText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/currentTimeText"
            android:gravity="center_vertical"
            android:text="@string/timeshift_default_total_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/togglePlayButton"
            android:layout_width="64dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="@color/colorPrimary"
            android:text="@string/timeshift_button_pause"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_alignParentTop="true">

        <com.hubtele.android.ui.view.ChatRecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:scrollbars="vertical" />

        <com.hubtele.android.ui.view.Scroller
            android:id="@+id/scroller"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <com.hubtele.android.ui.view.ChatToolBar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />


</RelativeLayout>